--- a/TravelPal/TravelPal.csproj
+++ b/TravelPal/TravelPal.csproj
@@ -7,4 +7,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Images\travelpal-logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Images\travelpal-logo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
